# learning-stuff

c/: enums.c  numerics.c
c-tutorial/: my_types.c
cpp/: CMakeLists.txt  ifelse.cpp  myfirstcplus.cpp
java/: Hello.java  World.java
python/: hello.py
ruby/: hello.rb
testing/protractor/: todo-spec.js
